Implemented ClassRelation, Diagram, SeqDiagram, SeqRelation, ClassDiagram (Missing check correct and remove all relations). Tests  update